# Restaurant-POS

./: .gitignore  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  stash.patch  tsconfig.json
.github/scripts/: prepare-tauri-windows-resources.mjs
.github/workflows/: windows-build.yml
apps/api/: .env.example  package.json  tsconfig.json
apps/tauri-pos/: env.build.example  package.json  tsconfig.json
apps/tauri-pos/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/tauri-pos/src-tauri/capabilities/: default.json
apps/tauri-pos/src-tauri/icons/: icon.icns
apps/tauri-pos/src-tauri/permissions/: allow-pos-desktop.toml
apps/tauri-pos/src-tauri/resources/: desktop-runtime.js
apps/tauri-pos/src-tauri/scripts/: ensure-bundled-backend-dev.mjs  ensure-installer-binaries.mjs  package-bundled-backend.mjs  sync-api-dist.mjs  validate-bundled-backend.mjs  validate-tauri-config.mjs
apps/tauri-pos/src-tauri/src/: bootstrap.rs  commands.rs  desktop_log.rs  desktop_paths.rs  embedded_node.rs  main.rs  print_dispatch.rs  win_spool.rs
apps/tauri-pos/src-tauri/windows/: installer.nsh
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts  (+1 more)
node_modules_old/: .modules.yaml
restaurant-pos/: package-lock.json  package.json
scripts/: db-down.sh  db-reset.sh  db-up.sh  wait-for-postgres.sh
tmp/: cash-register-audit.py  check-snapshots.mjs  debug-dispatch.ts  eod-audit.py  eod-audit.ts  go-live-kitchen-test.py  kitchen-audit.py  kitchen-ticket-preview.html  session-client-refresh-test.mjs  session-refresh-test.sh
(+401 files in other folders)
