[package]
name = "pos-tauri"
version = "0.1.0"
description = "Restaurant POS desktop shell"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = { version = "0.22.1", default-features = false, features = ["std"] }
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tauri = { version = "2", features = [] }
tauri-plugin-autostart = "2.5.1"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-log = "2.8.0"
tauri-plugin-shell = "2.3.5"
tauri-plugin-single-instance = "2.4.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Graphics_Printing", "Win32_Foundation"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
